--- a/package.json
+++ b/package.json
@@ -9,19 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.14.1",
+    "@heroicons/react": "^2.1.1",
+    "@web5/api": "^0.8.3",
+    "crypto-browserify": "^3.12.0",
+    "jsmediatags": "^3.9.7",
+    "lodash": "^4.17.21",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-feather": "^2.0.10",
+    "sass": "^1.69.7",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/jsmediatags": "^3.9.6",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "critters": "0.0.20",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "sailui": "^0.7.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
