--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "crypto-browserify": "^3.12.0",
     "jsmediatags": "^3.9.7",
     "lodash": "^4.17.21",
-    "next": "14.0.1",
+    "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
@@ -38,5 +38,8 @@
     "sailui": "^0.7.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "peerDependencies": {
+    "react-native-fs": "2.20.0"
   }
 }
